syntax = "proto3";

package com.example.protos;

// The greeter service definition.
// https://grpc.io/docs/what-is-grpc/core-concepts/
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc LotsOfReplies(HelloRequest) returns (stream HelloReply);
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloReply);
  rpc BidiHello(stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
optional string name = 1;
optional int32 number = 2;
}

// The response message containing the greetings
message HelloReply {
optional string message = 1;
}
